--- a/mandelbulber2/formula/ui/transf_difs_grid_v3.ui
+++ b/mandelbulber2/formula/ui/transf_difs_grid_v3.ui
@@ -1361,7 +1361,7 @@
         <item row="3" column="0">
          <widget class="MyCheckBox" name="checkBox_transf_function_enabledY_false">
           <property name="text">
-           <string notr="true">oval</string>
+           <string notr="true">deform??</string>
           </property>
          </widget>
         </item>
